[package]
name = "thanos-fs"
version = "0.1.0"
authors = ["Piyush Rungta <piyushrungta25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
log = "0.4.0"
env_logger = "0.7.1"
libc = "0.2.66"
time = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
walkdir = "2"
